<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rss</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="findWeb">Find websites</string>
    <string name="linkSite">link</string>
    <string name="titleSite">TitleSite</string>
    <string name="webDescription">Description</string>
    <string name="authorNewsList">author</string>
    <string name="titleNews">titleNews</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="date">date</string>
    <string name="favorite">favorite</string>

</resources>
