<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:focusable="false"
        android:id="@+id/website_item_title"
        android:singleLine="true"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff7ffca"
        android:text="@string/titleSite"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:isScrollContainer="false"
        android:marqueeRepeatLimit="marquee_forever"/>


    <TextView
        android:lines="1"
        android:paddingLeft="10dp"
        android:id="@+id/website_item_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkSite"
        android:textSize="10sp"
        android:textColor="#ffffff"
        android:autoLink="web"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:focusable="false"
        android:id="@+id/website_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webDescription"
        android:textSize="12sp"
        android:textColor="#ffffff"/>

</LinearLayout>